[profile.release]
panic = 'unwind'

[workspace]
members = [
    'pallet-fuso-token',
    'pallet-fuso-verifier',
    'pallet-fuso-verifier/runtime-api',
    'pallet-fuso-verifier/rpc',
    'pallet-fuso-foundation',
    'pallet-fuso-reward',
    'pallet-fuso-agent',
    'pallet-fuso-indicator',
    'pallet-chainbridge',
    'pallet-chainbridge-handler',
    'fuso-support',
]
