[profile.release]
panic = 'unwind'

[workspace]
members = [
    'pallet-fuso-token',
    'pallet-fuso-verifier',
    'pallet-fuso-foundation',
    'pallet-fuso-reward',
    'pallet-fuso-agent',
    'pallet-fuso-indicator',
    'pallet-chainbridge',
    'pallet-chainbridge-handler',
    'fuso-support',
    'rpc',
    'runtime-api/verifier',
]
