[package]
name = "pallet-fuso-receipts"
version = "0.1.0"
authors = ["UINB Tech"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
repository = "https://github.com/uinb/fusotao-protocol"
description = "FUSOTAO receipts pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
sp-std = { default-features = false, version = '3.0.0' }
ascii = { version = "1.0", default-features = false }
fuso-support = { version = "0.1.0", path = "../fuso-support", default-features = false }
serde = { default-features = false, version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = "3.0.0" }
pallet-fuso-token = { version = "0.1.0", path = "../pallet-fuso-token", default-features = false }
smt = { git = "https://github.com/uinb/sparse-merkle-tree", package = "sparse-merkle-tree", default-features = false, features = ["sha256"] }

[dev-dependencies]
sp-core = { version = "3.0.0" }

[features]
default = ["std"]
std = [
    #"serde",
    "codec/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]
