[package]
name = "pallet-fuso-verifier"
version = "4.0.0-rc"
authors = ["UINB Tech"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
repository = "https://github.com/uinb/fusotao-protocol"
description = "FUSOTAO verifier pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.3.1' }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13"  }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13"  }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13"  }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13"  }
ascii = { version = "1.0", default-features = false }
serde = { default-features = false, version = "1.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13"  }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13"  }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13"  }
fuso-support = { path = "../fuso-support", default-features = false }
smt = { git = "https://github.com/uinb/sparse-merkle-tree", tag = "v0.1.7", package = "sparse-merkle-tree", default-features = false, features = ["blake2b"] }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13"  }
pallet-fuso-token = { defualt-features = false, path = "../pallet-fuso-token"}
pallet-balances = { defaut-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13"  }

[features]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]
