[package]
name = "fuso-verifier-rpc"
version = "4.0.0-rc"
authors = ["UINB Tech"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
repository = "https://github.com/uinb/fusotao-protocol"
description = "RPC for FUSOTAO verifier pallet"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"] }

sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"  }

fuso-verifier-runtime-api = { path = "../runtime-api"}

# [features]
# default = ["std"]
# std = [
#     "serde/std",
#     "codec/std",
#     "sp-api/std",
#     "sp-runtime/std",
#     "fuso-verifier-runtime-api/std",
# ]
