[package]
name = "fuso-broker-rpc"
version = "4.0.2"
authors = ["UINB Tech"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
repository = "https://github.com/uinb/fusotao-protocol"
description = "RPC for FUSOTAO verifier pallet"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpsee = {version = "0.15.1", features = ["server", "macros"]}
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
